[package]
name = "futures-finally"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
description = """
A utility that executes a future after the completion of a future or stream regardless of the value or outcome.
"""
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dariusc93/futures-finally"
authors = ["Darius Clark"]
exclude = [".gitignore"]

[dependencies]
futures = "0.3.30"
pin-project = "1"